--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -17,4 +17,5 @@
     \include{Lectures/lecture12.tex}
     \include{Lectures/lecture13.tex}
     \include{Lectures/lecture14.tex}
+    \include{Lectures/lecture15.tex}
 \end{document}
