--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -18,4 +18,5 @@
     \include{Lectures/lecture13.tex}
     \include{Lectures/lecture14.tex}
     \include{Lectures/lecture15.tex}
+    \include{Lectures/lecture16.tex}
 \end{document}
