--- a/CS191/Lectures/lecture16.tex
+++ b/CS191/Lectures/lecture16.tex
@@ -69,9 +69,9 @@ the Shor code doesn't follow this. For example, $Z_1 \ket{\tilde{\tilde{0}}} = Z
         \[ \sum_{\mu} M_{\mu} \ket{\tilde{i}} \ket{\phi_{\mu}} \]
         which upon recovery becomes
         \begin{align*}
-            &\sum_{\nu, \mu} R_{\nu} M_{\mu} \ket{\tilde{i}} \ket{\phi_{\mu}} \ket{\nu}
+            &\sum_{\nu, \mu} R_{\nu} M_{\mu} \ket{\tilde{i}} \ket{\phi_{\mu}} \ket{\nu} \\
             &= \sum_{\nu, \mu, j} \frac{1}{c_{\nu}} \ketbra{\tilde{j}} M_{\nu}^{\dagger} M_{\mu} \ket{\tilde{i}} \ket{\phi_{\mu}} \ket{\nu} \\
-            &= \sum_{\nu, \mu, j} TODO
+            &= \sum_{\nu, \mu, j} TODO \\
             &= \sum_{\mu} \sqrt{c_{\mu}} \ket{\tilde{i}} \ket{\phi_{\mu}} \ket{\mu}
         \end{align*}
         Now, we just need to show that this is actually a channel.
