--- a/CS191/Lectures/lecture17.tex
+++ b/CS191/Lectures/lecture17.tex
@@ -79,8 +79,8 @@ One may ask if we can do better. The answer is no.
 \end{theorem}
 
 \subsection{Toric Code}
-Consider a rectangular lattice. We are going to place one physical qubit on each edge of the lattice.
-Imagine a toroidal topology, so the top of the lattice is connected to the bottom and the right of the lattice is connected to the left.
+Consider a square lattice. We are going to place one physical qubit on each edge of the lattice.
+Further we add a toroidal topology, so the top of the lattice is connected to the bottom and the right of the lattice is connected to the left.
 Let $v$ be a vertex, $e$ be an edge (physical qubit) and $p$ be a face (plaquette) of this lattice. Define $e(p) = \{ e : e = \{p, \cdot\}\}$ and
 $A_v = \prod_{e(p)} X_e$. Since each vertex has 4 incident edges, there are 4 $X$ operators and $B_p = \prod_{e(p)} Z_p$
 where we mean incident edges in the dual graph, i.e. the edges surrounding the face. Again, there are 4 per face, so this is very explicit.
