--- a/CS191/Lectures/lecture9.tex
+++ b/CS191/Lectures/lecture9.tex
@@ -75,7 +75,7 @@ Now, we see that applying $D$ inverts every element about the mean. Let's use th
 \subsubsection{Analysis of Grover's Algorithm}
 
 At step 0, all the amplitudes are evenly distributed as $\frac{1}{\sqrt{N}}$. Applying $U_f$, we end up with the phase state,
-which is $-1$ at $a$ and 0 everywhere else. This causes the mean of the amplitudes to decrease ever so slightly, so that after applying $D$, the rest of the amplitudes shirt a small amount, and $a$'s amplitude goes up to nearly $\frac{3}{\sqrt{N}}$.
+which is $-1$ at $a$ and 0 everywhere else. This causes the mean of the amplitudes to decrease ever so slightly, so that after applying $D$, the rest of the amplitudes shift a small amount, and $a$'s amplitude goes up to nearly $\frac{3}{\sqrt{N}}$.
 After another iteration, it goes up to $\frac{5}{\sqrt{N}}$, and it keeps on increasing by about $\frac{2}{\sqrt{N}}$
 as long all the amplitudes are close to $\frac{1}{\sqrt{N}}$. In fact, we get an increase of at least $\frac{1}{\sqrt{N}}$ as long as the other amplitudes are above $\frac{1}{2\sqrt{N}}$. 
 
