--- a/CS191/lectures.tex
+++ b/CS191/lectures.tex
@@ -20,4 +20,5 @@
     \include{Lectures/lecture15.tex}
     \include{Lectures/lecture16.tex}
     \include{Lectures/lecture17.tex}
+    \include{Lectures/lecture18.tex}
 \end{document}
